Revision history for Perl module WebService::Rackspace::CloudFiles:

1.01 Sat Oct 16 15:13:00 GMT+2 2010
    - Added missing File::Stat dependency as it's a required module for testing

1.00 Sat Jun 03 10:49:00 GMT+2 2010
    - Forked from Net::Mosso::CloudFiles. Mosso changed name to Rackspace over
	  a year ago.	
    - Moved from ExtUtils::MakeMaker to Module::Install

0.44 Sat Jun 03 09:39:02 GMT+2 2010
    - Support for metadata - patch supplied by Jay Kuri, modified and applied by
	  Christiaan Kras - closes RT#48561
    - All tests now pass since RT#58854 for DateTime::Format::HTTP has been
      fixed.

0.43 Sat May 30 17:45:34 BST 2009
    - work with latest Moose

0.42 Fri Mar 27 15:49:48 GMT 2009
    - add Crypt::SSLeay as a dependency as we use SSL for all
      requests
    - update documentation
    - add Pod tests
    - make request, uri methods private

0.41 Tue Mar 17 14:52:50 GMT 2009
    - fix problem with uploading binary data

0.40 Tue Mar 17 11:15:28 GMT 2009
    - Major rewrite to be more like Net::Amazon::S3
    - Use new JSON request for listing objects - adding size, etag,
      content_type and last_modified

0.35 Mon Feb  2 06:10:06 GMT 2009
    - Reauthenticate when the authentication token expires
      (after one hour)
    - Return more than 10,000 objects by issuing multiple calls
      (objects now returns a Data::Stream::Bulk object)
    - Only do 990 keep alive requests per connection
    - Add prefix as an option to objects

0.34 Tue Jan 13 15:37:27 GMT 2009
    - Retry upon errors using LWP::UserAgent::Determined
    - Make all the classes immutable

0.33 Tue Jan 13 09:04:11 GMT 2009
    - Add getting and putting to files
    - Prohibit UTF8 key names
    - Change the default content type from text/plain to 
      application/octet-stream

0.32 Wed Oct 22 23:01:11 BST 2008
	- First release